En vista de probador, inputs para ponerle nombres a las entradas y salidas

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <ul>
                             <li><a href="#/hardware">Tester<i class="material-icons">memory</i></a></li>
                             <li><a href="">Analizador lógico<i class="material-icons">broken_image</i></a></li>
-                            <li><a href="">Verificador<i class="material-icons">check_box</i></a></li>                            
+                            <li><a href="">Verificador<i class="material-icons">check_box</i></a></li>                                                        
                         </ul>
                     </div>
                 </li>
@@ -278,7 +278,8 @@
                 <li>Descargar <a href="https://www.cipressus.uns.edu.ar/assets/serialPortServer.js">serialPortServer.js</a> y ejecutar con NodeJS.</li>
                 <li>Presionar el botón "CONECTAR" para establecer conexión con el server. Si el server no se está ejecutando, igualmente puede iniciarlo luego de haber presionado "CONECTAR".</li>
                 <li>Seleccionar el puerto serie correspondiente al probador en la lista que aparece y presionar "INICIAR".</li>
-                <li>Para desconectar el probador, presione "DESCONECTAR" y finalice el server con "Ctrl+C".</li>
+                <li>En la sección "Hardware" del menú se dispone de las herramientas para controlar el probador de circuitos.</li>
+                <li>Para desconectar el probador, presione "DESCONECTAR". Puede finalizar el server con "Ctrl+C".</li>
                 <li>Finalmente, desconecte el probador del cable USB.</li>
             </ol>
 
