--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     <div class="collapsible-body">
                         <ul>
                             <li><a href="#/hardware">Tester<i class="material-icons">memory</i></a></li>
-                            <li><a href="">Analizador lógico<i class="material-icons">broken_image</i></a></li>
-                            <li><a href="">Verificador<i class="material-icons">check_box</i></a></li>                                                        
+                            <li><a href="#/analizer">Analizador lógico<i class="material-icons">broken_image</i></a></li>
+                            <li><a href="#/inspector">Verificador<i class="material-icons">check_box</i></a></li>
                         </ul>
                     </div>
                 </li>
@@ -226,7 +226,7 @@
             </div>
             <div class="row">
             <h4><b>Acerca de CIPRESSUS</b></h4>
-            <p>Cipressus es una aplicación con herramientas para la gestión de actividades educativas. Implementa un sistema de cómputo automático de calificaciones y permite la consulta en tiempo real de resultados de evaluaciones, noticias y cronograma de cátedra, descarga de material de estudio y muchas otras utilidades.</p>
+            <p>Cipressus es un sistema de gestión de contenidos para el aprendizaje (LCMS). Implementa un sistema de cómputo automático de calificaciones y permite la consulta en tiempo real de resultados de evaluaciones, noticias y cronograma de cátedra, descarga de material de estudio y muchas otras utilidades.</p>
             </div>
             <div class="row">
                 <h5>Contacto</h5>
@@ -317,6 +317,8 @@
     <script type="text/javascript" src="controllers/sources.js"></script>
     <script type="text/javascript" src="controllers/submissions.js"></script>
     <script type="text/javascript" src="controllers/hardware.js"></script>
+    <script type="text/javascript" src="controllers/analizer.js"></script>
+    <script type="text/javascript" src="controllers/inspector.js"></script>
     <script type="text/javascript" src="controllers/simulator.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
     <script type="text/javascript" src="controllers/stats.js"></script>
