Simulador disponibles para visitors

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <li class="no-padding" ng-show="user.enrolled">
             <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
         </li>        
-        <li class="no-padding" ng-show="user.enrolled">
+        <li class="no-padding">
             <a href="#/simulator" class="collapsible-header">Simulador<i class="material-icons">developer_board</i></a>
         </li>
         <li class="no-padding hide-on-med-and-down">
