Filtros de usuarios. Mejora en estilo de tablas. Fixes varios

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="preloader-wrapper-pre valign-wrapper" ng-if="loading">
         <h5 id="preloader_progress" class="white-text preloader-progress-text"></h5>
         <div class="preloader-wrapper big active">
-            <div class="spinner-layer spinner-blue-only">
+            <div class="spinner-layer spinner-green-only">
                 <div class="circle-clipper left">
                     <div class="circle"></div>
                 </div>
