Reorganizacion de directorio

--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
     <link type="text/css" rel="stylesheet" href="style/simcir-basicset.css"/>
 
     <!-- ##################### LIBS ##################### -->
-    <script type="text/javascript" src="vendor/materialize.min.js"></script>
-    <script type="text/javascript" src="vendor/angular.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-route.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-sanitize.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-local-storage.min.js"></script>
-    <script type="text/javascript" src="vendor/jquery.min.js"></script>
-    <script type="text/javascript" src="vendor/is.min.js"></script>
-    <script type="text/javascript" src="vendor/firebase.min.js"></script>
-    <script type="text/javascript" src="vendor/moment.min.js"></script>
-    <script type="text/javascript" src="vendor/fullcalendar.min.js"></script>
-    <script type="text/javascript" src="vendor/fullcalendar-es-us.js"></script>
-    <script type="text/javascript" src="vendor/highcharts.min.js"></script>    
-    <script type="text/javascript" src="vendor/highcharts-drilldown.min.js"></script>
-    <script type="text/javascript" src="vendor/sunburst.min.js"></script>
-    <script type="text/javascript" src="vendor/variable-pie.js"></script>
-    <script type="text/javascript" src="vendor/quill.min.js"></script>
-    <script type="text/javascript" src="vendor/image-resize.min.js"></script>
-    <script type="text/javascript" src="vendor/simcir.js"></script>
-    <script type="text/javascript" src="vendor/simcir-basicset.js"></script>
-    <script type="text/javascript" src="vendor/simcir-library.js"></script>
-    <script type="text/javascript" src="assets/cipressus.js"></script>
+    <script type="text/javascript" src="assets/vendor/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/angular.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/angular-local-storage.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/is.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/firebase.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/moment.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/fullcalendar.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/fullcalendar-es-us.js"></script>
+    <script type="text/javascript" src="assets/vendor/highcharts.min.js"></script>    
+    <script type="text/javascript" src="assets/vendor/highcharts-drilldown.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/sunburst.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/variable-pie.js"></script>
+    <script type="text/javascript" src="assets/vendor/quill.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/image-resize.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-basicset.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-library.js"></script>
+    <script type="text/javascript" src="assets/custom/cipressus.js"></script>
 
 </head>
 
@@ -274,8 +274,8 @@
             <ol>
                 <li><a href="https://nodejs.org/es/download/">Descargar</a> e instalar NodeJS</li>
                 <li>Conectar el probador al puerto USB.</li>
-                <li>Asegúrese de que el <a href="https://www.cipressus.uns.edu.ar/probador/Firmware/Firmware.ino">firmware</a> del probador está actualizado.</li>
-                <li>Descargar <a href="https://www.cipressus.uns.edu.ar/assets/SerialPortServer.js">SerialPortServer.js</a> y ejecutar con NodeJS.</li>
+                <li>Asegúrese de que el <a href="probador/Firmware/Firmware.ino">firmware</a> del probador está actualizado.</li>
+                <li>Descargar <a href="probador/SerialPortServer.js">SerialPortServer.js</a> y ejecutar con NodeJS.</li>
                 <li>Presionar el botón "CONECTAR" para establecer conexión con el server. Si el server no se está ejecutando, igualmente puede iniciarlo luego de haber presionado "CONECTAR".</li>
                 <li>Seleccionar el puerto serie correspondiente al probador en la lista que aparece y presionar "INICIAR".</li>
                 <li>En la sección "Hardware" del menú se dispone de las herramientas para controlar el probador de circuitos.</li>
