Simulador: nodos virtuales. Notas para controlar componentes desde afuera

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script type="text/javascript" src="assets/vendor/simcir.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-basicset.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-library.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-virtual-port.js"></script>
     <script type="text/javascript" src="assets/custom/cipressus.js"></script>
 
 </head>
