--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="assets/vendor/simcir-basicset.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-library.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-virtual-port.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-external-port.js"></script>
     <script type="text/javascript" src="assets/custom/cipressus.js"></script>
 
 </head>
@@ -145,7 +146,7 @@
         <li class="no-padding" ng-show="user.enrolled">
             <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
         </li>        
-        <li class="no-padding">
+        <li class="no-padding hide-on-med-and-down">
             <a href="#/simulator" class="collapsible-header">Simulador<i class="material-icons">developer_board</i></a>
         </li>
         <li class="no-padding hide-on-med-and-down">
