Fixes simulador. Nueva herramienta: Mapas-K interactivos

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <script type="text/javascript" src="assets/vendor/simcir-library.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-virtual-port.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-external-port.js"></script>
+    <script type="text/javascript" src="assets/vendor/karnaughmap.js"></script>
+    <script type="text/javascript" src="assets/vendor/qmc.js"></script>
     <script type="text/javascript" src="assets/custom/cipressus.js"></script>
 
 </head>
@@ -148,6 +150,9 @@
         </li>        
         <li class="no-padding hide-on-med-and-down">
             <a href="#/simulator" class="collapsible-header">Simulador<i class="material-icons">developer_board</i></a>
+        </li>
+        <li class="no-padding">
+            <a href="#/kMaps" class="collapsible-header">Mapas-K<i class="material-icons">grid_on</i></a>
         </li>
         <li class="no-padding hide-on-med-and-down">
             <ul class="collapsible_1 collapsible collapsible-accordion">
@@ -322,6 +327,7 @@
     <script type="text/javascript" src="controllers/analizer.js"></script>
     <script type="text/javascript" src="controllers/inspector.js"></script>
     <script type="text/javascript" src="controllers/simulator.js"></script>
+    <script type="text/javascript" src="controllers/kMaps.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
     <script type="text/javascript" src="controllers/stats.js"></script>
     <script type="text/javascript" src="controllers/attendance.js"></script>
