Parametros de mapas de karnaugh

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <link type="text/css" rel="stylesheet" href="style/custom.css"/>
     <link type="text/css" rel="stylesheet" href="style/simcir.css"/>
     <link type="text/css" rel="stylesheet" href="style/simcir-basicset.css"/>
+    <link type="text/css" rel="stylesheet" href="style/qmc.css"/>
 
     <!-- ##################### LIBS ##################### -->
     <script type="text/javascript" src="assets/vendor/materialize.min.js"></script>
