Agrupar items del menu

--- a/index.html
+++ b/index.html
@@ -149,18 +149,15 @@
         <li class="no-padding" ng-show="user.enrolled">
             <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
         </li>        
-        <li class="no-padding hide-on-med-and-down">
-            <a href="#/simulator" class="collapsible-header">Simulador<i class="material-icons">developer_board</i></a>
-        </li>
-        <li class="no-padding">
-            <a href="#/kMaps" class="collapsible-header">Mapas-K<i class="material-icons">grid_on</i></a>
-        </li>
+
         <li class="no-padding hide-on-med-and-down">
             <ul class="collapsible_1 collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header">Hardware<i class="material-icons">arrow_drop_down</i></a>
+                    <a class="collapsible-header">Herramientas<i class="material-icons">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
+                            <li><a href="#/simulator">Simulador<i class="material-icons">developer_board</i></a></li>
+                            <li><a href="#/kMaps">Mapas-K<i class="material-icons">grid_on</i></a></li>
                             <li><a href="#/hardware">Tester<i class="material-icons">memory</i></a></li>
                             <li><a href="#/analizer">Analizador lógico<i class="material-icons">broken_image</i></a></li>
                             <li><a href="#/inspector">Verificador<i class="material-icons">check_box</i></a></li>
@@ -169,6 +166,7 @@
                 </li>
             </ul>
         </li>
+        
         <li class="no-padding" ng-show="user.admin">
             <ul class="collapsible_2 collapsible collapsible-accordion">
                 <li>
