Vis.js para visualizar esquema jerarquico de materias

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <link rel="icon" href="images/favicon.ico" sizes="16x16"/>
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <!--<link type="text/css" rel="stylesheet" href="style/icons.css"/>-->
-    <link type="text/css" rel="stylesheet" href="style/materialize.min.css" media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="style/fullcalendar.css"/>
-    <link type="text/css" rel="stylesheet" href="style/quill.snow.css"/>
-    <link type="text/css" rel="stylesheet" href="style/timeline.css"/>
-    <link type="text/css" rel="stylesheet" href="style/custom.css"/>
-    <link type="text/css" rel="stylesheet" href="style/simcir.css"/>
-    <link type="text/css" rel="stylesheet" href="style/simcir-basicset.css"/>
-    <link type="text/css" rel="stylesheet" href="style/qmc.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/fullcalendar.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/quill.snow.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/timeline.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/simcir.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/simcir-basicset.css"/>
+    <link type="text/css" rel="stylesheet" href="style/vendor/qmc.css"/>
+    <link type="text/css" rel="stylesheet" href="style/custom/custom.css"/>
 
     <!-- ##################### LIBS ##################### -->
     <script type="text/javascript" src="assets/vendor/materialize.min.js"></script>
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="assets/vendor/highcharts-drilldown.min.js"></script>
     <script type="text/javascript" src="assets/vendor/sunburst.min.js"></script>
     <script type="text/javascript" src="assets/vendor/variable-pie.js"></script>
+    <script type="text/javascript" src="assets/vendor/vis-network.min.js"></script>
     <script type="text/javascript" src="assets/vendor/quill.min.js"></script>
     <script type="text/javascript" src="assets/vendor/image-resize.min.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir.js"></script>
@@ -311,6 +312,7 @@
             </div>
         </div>
     </div>
+
 
 
     <!-- ##################### CONTROLLERS ##################### -->
