Vista para tabla de verdad interactiva

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                         <ul>
                             <li><a href="#/simulator">Simulador<i class="material-icons">developer_board</i></a></li>
                             <li><a href="#/kMaps">Mapas-K<i class="material-icons">grid_on</i></a></li>
+                            <li><a href="#/tables">Tablas de verdad<i class="material-icons">playlist_add_check</i></a></li>
                             <li><a href="#/hardware">Tester<i class="material-icons">memory</i></a></li>
-                            <li><a href="#/analizer">Analizador lógico<i class="material-icons">broken_image</i></a></li>
-                            <li><a href="#/inspector">Verificador<i class="material-icons">check_box</i></a></li>
+                            <li><a href="#/analizer">Analizador lógico<i class="material-icons">broken_image</i></a></li>                            
                         </ul>
                     </div>
                 </li>
@@ -329,9 +329,9 @@
     <script type="text/javascript" src="controllers/submissions.js"></script>
     <script type="text/javascript" src="controllers/hardware.js"></script>
     <script type="text/javascript" src="controllers/analizer.js"></script>
-    <script type="text/javascript" src="controllers/inspector.js"></script>
     <script type="text/javascript" src="controllers/simulator.js"></script>
     <script type="text/javascript" src="controllers/kMaps.js"></script>
+    <script type="text/javascript" src="controllers/tables.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
     <script type="text/javascript" src="controllers/stats.js"></script>
     <script type="text/javascript" src="controllers/attendance.js"></script>
