Dispositivo de audio para el simulador

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
     <script type="text/javascript" src="assets/vendor/vis-network.min.js"></script>
     <script type="text/javascript" src="assets/vendor/quill.min.js"></script>
     <script type="text/javascript" src="assets/vendor/image-resize.min.js"></script>
+    <script type="text/javascript" src="assets/vendor/tone.min.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-basicset.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-library.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-virtual-port.js"></script>
     <script type="text/javascript" src="assets/vendor/simcir-external-port.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-audio-port.js"></script>
     <script type="text/javascript" src="assets/vendor/karnaughmap.js"></script>
     <script type="text/javascript" src="assets/vendor/qmc.js"></script>
     <script type="text/javascript" src="assets/custom/cipressus.js"></script>
