Cambio frecuencia oscilador

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <ul>
                             <li><a href="#/simulator">Simulador<i class="material-icons">developer_board</i></a></li>
                             <li><a href="#/kMaps">Mapas-K<i class="material-icons">grid_on</i></a></li>
-                            <li><a href="#/tables">Tablas de verdad<i class="material-icons">playlist_add_check</i></a></li>
+                            <!--<li><a href="#/tables">Tablas de verdad<i class="material-icons">playlist_add_check</i></a></li>-->
                             <li><a href="#/hardware">Tester<i class="material-icons">memory</i></a></li>
                             <li><a href="#/analizer">Analizador lógico<i class="material-icons">broken_image</i></a></li>                            
                         </ul>
