--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                         background-repeat: no-repeat;
                         background-position: 50% 50%;
                         background-attachment: fixed;
-                        background-size: 60%;
-                        filter: blur(10px);
+                        background-size: 25%;
+                        filter: blur(10px);                        
                         width: 100%; 
                         height: 100%; 
                         position: fixed; 
@@ -247,13 +247,16 @@
                 San Andrés 800, CP8000 Bahía Blanca<br>
                 Buenos Aires, Argentina<br>
                 Teléfono: +54 291 4595153/4<br>
-                Website: <a href="http://www.diec.uns.edu.ar/">http://www.diec.uns.edu.ar/</a></p>
+                Website: <a href="http://www.diec.uns.edu.ar/rts/#/group">http://www.diec.uns.edu.ar/rts/#/group</a></p>
             </div>
-            <br>
-            <div class="row" style="font-size:75%;">  
+            <div class="row">  
                 <h5>Diseño e implementación</h5>
-                Ing. Matías J. Micheletto<br>
-                Email: <a href="mailto:matias.micheletto@uns.edu.ar?Subject=Ref.%20Cipressus">matias.micheletto@uns.edu.ar</a><br>
+                Ing. Matías J. Micheletto
+                <br>
+                <a href="http://matiasmicheletto.github.io/">http://matiasmicheletto.github.io/</a>
+                <br>
+                Email: <a href="mailto:matias.micheletto@uns.edu.ar?Subject=Ref.%20Cipressus">matias.micheletto@uns.edu.ar</a>
+                <br>
                 Documentación: <a href="https://github.com/matiasmicheletto/cipressus">https://github.com/matiasmicheletto/cipressus</a></p>
             </div>
             <div class="row" style="font-size:75%;">
