Configuracion de curso

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
                     <a class="collapsible-header">Administrar<i class="material-icons">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
+                            <li><a href="#/activities">Curso<i class="material-icons">build</i></a></li>
                             <li><a href="#/users">Alumnos<i class="material-icons">group</i></a></li>
-                            <li><a href="#/stats">Estadísticas<i class="material-icons">insert_chart</i></a></li>
                             <li><a href="#/attendance">Asistencia<i class="material-icons">how_to_reg</i></a></li>
-                            <li><a href="#/activities">Actividades<i class="material-icons">build</i></a></li>
                             <li><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
+                            <li><a href="#/stats">Estadísticas<i class="material-icons">insert_chart</i></a></li>
                         </ul>
                     </div>
                 </li>
