Fix: descarga de perfiles de usuarios en home

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="description" content="Webapp Cipressus - LCMS Sistemas Digitales" />
+    <meta name="description" content="Webapp Cipressus - LCMS Sistemas Digitales - Universidad Nacional el Sur" />
     <meta name="keywords" content="Cipressus, educación, diseño, circuitos lógicos, LCMS, learning, education" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Deshabilitar cache -->
