Vistas edición de cursos

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
                     <a class="collapsible-header">Administrar<i class="material-icons">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="no-padding"><a href="#/activities">Curso<i class="material-icons">build</i></a></li>
+                            <li class="no-padding"><a href="#/courses">Cursos<i class="material-icons">build</i></a></li>
                             <li class="no-padding"><a href="#/users">Alumnos<i class="material-icons">group</i></a></li>
                             <li class="no-padding"><a href="#/attendance">Asistencia<i class="material-icons">how_to_reg</i></a></li>
                             <li class="no-padding"><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
@@ -357,6 +357,7 @@
     <script type="text/javascript" src="controllers/stats.js"></script>
     <script type="text/javascript" src="controllers/attendance.js"></script>
     <script type="text/javascript" src="controllers/activities.js"></script>
+    <script type="text/javascript" src="controllers/courses.js"></script>
     <script type="text/javascript" src="controllers/editor.js"></script>
     <script type="text/javascript" src="controllers/profile.js"></script>
 
