--- a/src/index.html
+++ b/src/index.html
@@ -303,8 +303,8 @@
             <ol>
                 <li><a href="https://nodejs.org/es/download/">Descargar</a> e instalar NodeJS</li>
                 <li>Conectar el probador al puerto USB.</li>
-                <li>Asegúrese de que el <a href="probador/Firmware/Firmware.ino">firmware</a> del probador está actualizado.</li>
-                <li>Descargar <a href="probador/SerialPortServer.js">SerialPortServer.js</a> y ejecutar con NodeJS.</li>
+                <li>Asegúrese de que el <a href="tester/Firmware/Firmware.ino">firmware</a> del probador está actualizado.</li>
+                <li>Descargar <a href="tester/SerialPortServer.js">SerialPortServer.js</a> y ejecutar con NodeJS.</li>
                 <li>Presionar el botón "CONECTAR" para establecer conexión con el server. Si el server no se está ejecutando, igualmente puede iniciarlo luego de haber presionado "CONECTAR".</li>
                 <li>Seleccionar el puerto serie correspondiente al probador en la lista que aparece y presionar "INICIAR".</li>
                 <li>En la sección "Hardware" del menú se dispone de las herramientas para controlar el probador de circuitos.</li>
