--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
                             <li class="no-padding"><a href="#/courses">Cursos<i class="material-icons">build</i></a></li>
                             <li class="no-padding"><a href="#/users">Alumnos<i class="material-icons">group</i></a></li>
                             <li class="no-padding"><a href="#/attendance">Asistencia<i class="material-icons">how_to_reg</i></a></li>
-                            <li class="no-padding"><a href="#/editor">Noticias<i class="material-icons">fiber_new</i></a></li>
+                            <li class="no-padding"><a href="#/editor">Publicaciones<i class="material-icons">fiber_new</i></a></li>
                             <li class="no-padding"><a href="#/stats">Estadísticas<i class="material-icons">insert_chart</i></a></li>
                         </ul>
                     </div>
