Fix arrastrar eventos de calendario

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
             <a class="collapsible-header modal-trigger" data-target="help_modal">Ayuda<i class="material-icons">help</i></a>
         </li>
         <li class="no-padding">
-            <a href="https://github.com/matiasmicheletto/cipressus" class="collapsible-header">Documentación<i class="material-icons">import_contacts</i></a>
+            <a href="https://github.com/matiasmicheletto/cipressus" class="collapsible-header" target="_blank" rel="noopener noreferrer">Documentación<i class="material-icons">import_contacts</i></a>
         </li>
         <li class="no-padding">
             <a class="collapsible-header modal-trigger" data-target="about_modal">Acerca de<i class="material-icons">info</i></a>
@@ -231,7 +231,7 @@
                 San Andrés 800, CP8000 Bahía Blanca<br>
                 Buenos Aires, Argentina<br>
                 Teléfono: +54 291 4595153/4<br>
-                Website: <a href="http://www.diec.uns.edu.ar/rts/#/group">http://www.diec.uns.edu.ar/rts/#/group</a></p>
+                Website: <a href="http://www.diec.uns.edu.ar/rts/#/group" target="_blank" rel="noopener noreferrer">http://www.diec.uns.edu.ar/rts/#/group</a></p>
             </div>
             <div class="row">  
                 <h5>Diseño e implementación</h5>
@@ -241,7 +241,7 @@
                 <br>
                 Email: <a href="mailto:matias.micheletto@uns.edu.ar?Subject=Ref.%20Cipressus">matias.micheletto@uns.edu.ar</a>
                 <br>
-                Documentación: <a href="https://github.com/matiasmicheletto/cipressus">https://github.com/matiasmicheletto/cipressus</a></p>
+                Documentación: <a href="https://github.com/matiasmicheletto/cipressus" target="_blank" rel="noopener noreferrer">https://github.com/matiasmicheletto/cipressus</a></p>
             </div>
             <div class="row" style="font-size:75%;">
                 <h6>Términos y condiciones</h6>
