Galeria de videos

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,9 @@
             <a href="#/sources" class="collapsible-header">Material<i class="material-icons">local_library</i></a>
         </li>
         <li class="no-padding" ng-show="user.enrolled">
+            <a href="#/videos" class="collapsible-header">Videos<i class="material-icons">video_library</i></a>
+        </li>
+        <li class="no-padding" ng-show="user.enrolled">
             <a href="#/submissions" class="collapsible-header">Entregas<i class="material-icons">open_in_browser</i></a>
         </li>        
 
@@ -356,6 +359,7 @@
     <script type="text/javascript" src="controllers/simulator.js"></script>
     <script type="text/javascript" src="controllers/kMaps.js"></script>
     <script type="text/javascript" src="controllers/tables.js"></script>
+    <script type="text/javascript" src="controllers/videos.js"></script>
     <script type="text/javascript" src="controllers/users.js"></script>
     <script type="text/javascript" src="controllers/stats.js"></script>
     <script type="text/javascript" src="controllers/attendance.js"></script>
