--- a/src/index.html
+++ b/src/index.html
@@ -336,6 +336,8 @@
     <script type="text/javascript" src="assets/vendor/simcir-virtual-port.js"></script>
     <script type="text/javascript" src="assets/custom/simcir-external-port.js"></script>
     <script type="text/javascript" src="assets/custom/simcir-audio-port.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-dso.js"></script>
+    <script type="text/javascript" src="assets/vendor/simcir-transmitter.js"></script>
     <script type="text/javascript" src="assets/vendor/karnaughmap.js"></script>
     <script type="text/javascript" src="assets/vendor/qmc.js"></script>
 
